Fix courses carousel visibility

--- a/style.css
+++ b/style.css
@@ -316,10 +316,16 @@ p {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+/*Carrusel de tarjetas*/
+
 .carousel-inner {
   padding: 1em;
 }
-
+.card {
+  margin: 0 0.5em;
+  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+  border: none;
+}
 .carousel-control-prev,
 .carousel-control-next {
   background-color: #e1e1e1;
@@ -328,6 +334,31 @@ p {
   border-radius: 50%;
   top: 50%;
   transform: translateY(-50%);
+}
+@media (min-width: 768px) {
+  .carousel-item {
+    margin-right: 0;
+    flex: 0 0 33.333333%;
+    display: block;
+  }
+  .carousel-inner {
+    display: flex;
+  }
+}
+.card .img-wrapper {
+  max-width: 100%;
+  height: 13em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card img {
+  max-height: 100%;
+}
+@media (max-width: 767px) {
+  .card .img-wrapper {
+    height: 17em;
+  }
 }
 
 /*Animacion de la barra de navegación*/
@@ -841,6 +872,10 @@ p {
   border-radius: 5px;
 }
 
+.card-body .btn {
+  padding-inline: 7%;
+}
+
 /*Responsividad*/
 @media (max-width: 1200px) {
   .formularios .modal-content,
@@ -1057,16 +1092,12 @@ p {
   .cuadroFecha {
     margin-top: 3%;
   }
-}
 
-/*Carrusel de tarjetas*/
-@media (min-width: 768px) {
-  .carousel-inner {
+  .card-body {
     display: flex;
   }
-  .carousel-item {
-    margin-right: 0;
-    flex: 0 0 33.333333%;
-    display: block;
+
+  .card-body .btn {
+    padding-inline: 0%;
   }
 }
